# backend

./: Dockerfile  README.md  pyproject.toml  schema.py  settings.py  shell.nix  urls.py
.github/workflows/: deploy.yml  publish.yml  test.yml
backend/: settings.py  urls.py
greenhouse_management/: admin.py  apps.py  exceptions.py  managers.py  models.py  tests.py
greenhouse_management/graphql/: Device.py  Enviroment.py  GreenHouse.py  Location.py  User.py
greenhouse_management/graphql_tests/: GreenHouse_tests.py  device_tests.py  enviroment_tests.py  location_tests.py  user_tests.py
greenhouse_management/migrations/: 0001_initial.py  0002_customuser.py  0002_greenhouse.py  0003_alter_greenhouse_crop_type.py  0004_device.py  0004_enviroment.py  0004_location_alter_greenhouse_location_and_more.py  0005_alter_device_functionality.py  0005_device.py  0006_device_greenhouse.py  0006_location_alter_greenhouse_location_and_more.py  0006_location_owner.py  0007_device_greenhouse.py  0007_remove_location_latitude_remove_location_longitude.py  0008_enviroment.py  0009_environment_delete_enviroment.py  0010_rename_stem_micro_variability_environment_stem_micro_variability.py
user/: models.py
user/migrations/: 0001_initial.py
